# podpy

./: .gitignore  README.md  modules.sh  paper_data_Q1317_0507.py  prospero-modules.sh  pyproject.toml  slurm-31912.out  temp_test_job.sh  test.py
src/podpy_refocused/: _Ions.py  _Pod.py  _SpecWizard.py  _Spectrum.py  _TauBinned.py  __about__.py  __init__.py  _universe.py
src/podpy_refocused/_scripts/: create_noise_profile_from_observations.py  example.py  overdensity_from_specwizard.py  plot_from_specwizard.py  plot_noise_profile.py  spectrum_from_specwizard.py  weighted_quantities_from_specwizard.py
src/podpy_refocused/plotting/: __init__.py  _overdensity.py  _spectrum.py  _specwizard_noise_file.py  _tau_tau.py  _tools.py
src/podpy_refocused/plotting/comparison_data/: __init__.py  turner16.py
