[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podpy-refocused"
dynamic = ["version"]
description = 'Pixel optical depth implementation, updated for modern Python.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Christopher J. R. Rowe", email = "chris.rowe19@outlook.com" },
  { name = "Monica Turner", email = "turnerm@mit.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "PyQt5",
  "astropy",
  "QuasarCode",
  "h5py",
]

[project.urls]
Documentation = "https://github.com/QuasarX1/podpy-refocused#readme"
Issues = "https://github.com/QuasarX1/podpy-refocused/issues"
Source = "https://github.com/QuasarX1/podpy-refocused"

[project.scripts]
pod-run-example = "podpy_refocused._scripts.example:main"
pod-plot-specwizard-relation = "podpy_refocused._scripts.plot_from_specwizard:main"
pod-plot-specwizard-spectrum = "podpy_refocused._scripts.spectrum_from_specwizard:main"
pod-plot-specwizard-overdensity = "podpy_refocused._scripts.overdensity_from_specwizard:main"
pod-plot-specwizard-weighted-overdensity = "podpy_refocused._scripts.weighted_quantities_from_specwizard:main_overdensity"
pod-plot-specwizard-weighted-temperature = "podpy_refocused._scripts.weighted_quantities_from_specwizard:main_temperature"
pod-create-specwizard-noise-file = "podpy_refocused._scripts.create_noise_profile_from_observations:main"
pod-plot-specwizard-noise-file = "podpy_refocused._scripts.plot_noise_profile:main"

[tool.hatch.version]
path = "src/podpy_refocused/__about__.py"

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/podpy_refocused tests}"

[tool.coverage.run]
source_pkgs = ["podpy_refocused", "tests"]
branch = true
parallel = true
omit = [
  "src/podpy_refocused/__about__.py",
]

[tool.coverage.paths]
podpy_refocused = ["src/podpy_refocused", "*/podpy-refocused/src/podpy_refocused"]
tests = ["tests", "*/podpy-refocused/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
